--- a/CondoSimples/CondoSimples/Views/Address/_EditPartial.cshtml
+++ b/CondoSimples/CondoSimples/Views/Address/_EditPartial.cshtml
@@ -4,7 +4,7 @@
 @Scripts.Render("~/bundles/jqueryval")
 
 <div class="form-horizontal">
-    <h4>AddressModel</h4>
+    <h4>Endereço</h4>
     <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     @Html.HiddenFor(model => model.ID)
