--- a/CondoSimples/CondoSimples/Views/OutSourcer/Index.cshtml
+++ b/CondoSimples/CondoSimples/Views/OutSourcer/Index.cshtml
@@ -49,7 +49,7 @@
                     @Html.DisplayFor(modelItem => item.Contact)
                 </td>
                 <td>
-                    @Html.ActionLink("Details", "Details", new { id = item.ID })
+                    @Html.ActionLink("Detalhes", "Details", new { id = item.ID })
                 </td>
             </tr>
         }
