--- a/CondoSimples/CondoSimples/Views/Borrow/Index.cshtml
+++ b/CondoSimples/CondoSimples/Views/Borrow/Index.cshtml
@@ -64,9 +64,9 @@
                 </td>
                 <td>
                     @Html.ActionLink("Emprestar Item", "Lend", new { id = item.ID }) |
-                    @Html.ActionLink("Edit", "Edit", new { id = item.ID }) |
-                    @Html.ActionLink("Details", "Details", new { id = item.ID }) |
-                    @Html.ActionLink("Delete", "Delete", new { id = item.ID })
+                    @Html.ActionLink("Editar", "Edit", new { id = item.ID }) |
+                    @Html.ActionLink("Detalhes", "Details", new { id = item.ID }) |
+                    @Html.ActionLink("Excluir", "Delete", new { id = item.ID })
                 </td>
             </tr>
         }
