--- a/CondoSimples/CondoSimples/Views/Employee/Create.cshtml
+++ b/CondoSimples/CondoSimples/Views/Employee/Create.cshtml
@@ -6,7 +6,7 @@
 
 <h2>Novo</h2>
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm(null, null, FormMethod.Post, new { enctype = "multipart/form-data" })) 
 {
     @Html.AntiForgeryToken()
     
@@ -65,6 +65,13 @@
             <label for="pass" class="control-label col-md-2">Senha</label>
             <div class="col-md-10">
                 <input type="password" name="pass" class="form-control"/>
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label class="control-label col-md-2">Foto</label>
+            <div class="col-md-10">
+                <input type="file" name="Image" accept="image/jpeg, image/jpg" />
             </div>
         </div>
 
