--- a/CondoSimples/CondoSimples/Views/Home/Index.cshtml
+++ b/CondoSimples/CondoSimples/Views/Home/Index.cshtml
@@ -6,12 +6,12 @@
 
 <div class="page-header">
     <h1>@ViewBag.Condo</h1>
-    <p class="lead">Solução em gestão da informação e espaços em condomínios prediais</p>
+    <p class="lead">Bem-vindo!</p>
 </div>
 
 @if(User.IsInRole("Sindico") || User.IsInRole("Condomino"))
 {
-<div class="container">
+<section class="container reset-col">
     <h2>Mural</h2>
     <table class="table table-hover">
         <thead>
@@ -40,9 +40,9 @@
             }
         </tbody>
     </table>
-</div>
+</section>
 
-<div class="container">
+<section class="container reset-col">
     <h2>Solicitações de Empréstimo</h2>
     <table class="table table-hover">
         <thead>
@@ -75,9 +75,9 @@
             }
         </tbody>
     </table>
-</div>
+</section>
 
-<div class="container">
+<section class="container reset-col">
     <h2>Notificações</h2>
     <table class="table table-hover">
         <thead>
@@ -104,5 +104,5 @@
             }
         </tbody>
     </table>
-</div>
+</section>
 }
