--- a/CondoSimples/CondoSimples/Views/User/Create.cshtml
+++ b/CondoSimples/CondoSimples/Views/User/Create.cshtml
@@ -6,10 +6,11 @@
 
 <h2>Cadastro de usuário</h2>
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm(null, null, FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
     
+    <input type="hidden" name="idCondo" value="@ViewBag.CondoId" />
     <div class="form-horizontal">
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
@@ -46,10 +47,26 @@
         </div>
 
         <div class="form-group">
+            @Html.LabelFor(model => model.Phone, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Phone, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Phone, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
             @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.EmailOthers, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.EmailOthers, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.EmailOthers, "", new { @class = "text-danger" })
             </div>
         </div>
 
@@ -84,9 +101,11 @@
                 @Html.ValidationMessageFor(model => model.Visitors, "", new { @class = "text-danger" })
             </div>
         </div>
-        <div>
-            <label>Torre</label>
-            @Html.DropDownList("TowerId")
+        <div class="form-group">
+            <label class="control-label col-md-2">Torre</label>
+            <div class="col-md-10">
+                @Html.DropDownList("TowerId")
+            </div>
         </div>
         <div class="form-group">
             <label class="control-label col-md-2">Número da unidade</label>
@@ -98,6 +117,13 @@
             <label for="pass" class="control-label col-md-2">Senha</label>
             <div class="col-md-10">
                 <input type="password" name="pass" class="form-control" required/>
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label class="control-label col-md-2">Foto</label>
+            <div class="col-md-10">
+                <input type="file" name="Image" accept="image/jpeg, image/jpg" />
             </div>
         </div>
 
