--- a/CondoSimples/CondoSimples/Views/User/Details.cshtml
+++ b/CondoSimples/CondoSimples/Views/User/Details.cshtml
@@ -11,6 +11,12 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
+            Foto
+        </dt>
+        <dd>
+            <img src="@ViewBag.Image" />
+        </dd>
+        <dt>
             @Html.DisplayNameFor(model => model.Unit.Name)
         </dt>
 
