--- a/CondoSimples/CondoSimples/Views/User/Edit.cshtml
+++ b/CondoSimples/CondoSimples/Views/User/Edit.cshtml
@@ -6,7 +6,7 @@
 
 <h2>Editar</h2>
 
-@using (Html.BeginForm())
+@using (Html.BeginForm(null, null, FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
     
@@ -93,6 +93,13 @@
             <div class="col-md-10">
                 @Html.DropDownList("Unit_ID", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.Unit_ID, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label class="control-label col-md-2">Foto</label>
+            <div class="col-md-10">
+                <input type="file" name="Image" accept="image/jpeg, image/jpg" />
             </div>
         </div>
 
