--- a/CondoSimples/CondoSimples/Views/Shared/_Layout.cshtml
+++ b/CondoSimples/CondoSimples/Views/Shared/_Layout.cshtml
@@ -36,6 +36,7 @@
                         <li role="presentation">@Html.ActionLink("Empréstimos", "Index", "Borrow")</li>
                         <li role="presentation">@Html.ActionLink("Encomendas", "IndexByUser", "Order")</li>
                         <li role="presentation">@Html.ActionLink("Notificação", "Index", "Notification")</li>
+                        <li role="presentation">@Html.ActionLink("Agenda", "Index", "Schedule")</li>
                         <li role="presentation">@Html.ActionLink("Trocar Senha", "ChangePassword", "Manage")</li>
                         <li role="presentation" class="visible-xs"><a href="javascript:document.getElementById('logoutForm').submit()">Sair</a></li>
                     </ul>
@@ -50,6 +51,7 @@
                         <li role="presentation">@Html.ActionLink("Ocorrências", "Index", "Occurrence")</li>
                         <li role="presentation">@Html.ActionLink("Empréstimos", "Index", "Borrow")</li>
                         <li role="presentation">@Html.ActionLink("Encomendas", "IndexByUser", "Order")</li>
+                        <li role="presentation">@Html.ActionLink("Agenda", "Index", "Schedule")</li>
                         <li role="presentation">@Html.ActionLink("Trocar Senha", "ChangePassword", "Manage")</li>
                         <li role="presentation" class="visible-xs"><a href="javascript:document.getElementById('logoutForm').submit()">Sair</a></li>
                     </ul>
