--- a/CondoSimples/CondoSimples/Views/Employee/Create.cshtml
+++ b/CondoSimples/CondoSimples/Views/Employee/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model CondoSimples.Models.EmployeeModel
 
 @{
-    ViewBag.Title = "Novo";
+    ViewBag.Title = "Cadastrar novo funcionário";
 }
 
 <h2>Novo</h2>
