--- a/CondoSimples/CondoSimples/Views/Occurrence/IndexPending.cshtml
+++ b/CondoSimples/CondoSimples/Views/Occurrence/IndexPending.cshtml
@@ -46,7 +46,7 @@
                     @Html.DisplayFor(modelItem => item.Solved)
                 </td>
                 <td>
-                    @Html.ActionLink("Alterar", "Edit", new { id = item.ID }) |
+                    @Html.ActionLink("Editar", "Edit", new { id = item.ID }) |
                     @Html.ActionLink("Detalhes", "Details", new { id = item.ID }) |
                     @Html.ActionLink("Excluir", "Delete", new { id = item.ID })
                 </td>
