--- a/CondoSimples/CondoSimples/Views/OutSourcer/Details.cshtml
+++ b/CondoSimples/CondoSimples/Views/OutSourcer/Details.cshtml
@@ -56,7 +56,7 @@
 @Html.Partial("~/Views/Address/_DetailsPartial.cshtml", Model.Address)
 
 <p>
-    @Html.ActionLink("Alterar", "Edit", new { id = Model.ID }) |
+    @Html.ActionLink("Editar", "Edit", new { id = Model.ID }) |
     @Html.ActionLink("Excluir", "Delete", new { id = Model.ID }) |
     @Html.ActionLink("Voltar", "Index")
 </p>
