--- a/CondoSimples/CondoSimples/Views/Shared/_LoginPartial.cshtml
+++ b/CondoSimples/CondoSimples/Views/Shared/_LoginPartial.cshtml
@@ -9,7 +9,7 @@
         <li class="hello-user">
             <span>Olá @User.Identity.GetUserName()!</span>
         </li>
-        <li><a href="javascript:document.getElementById('logoutForm').submit()">Sair</a></li>
+        <li><a href="javascript:document.getElementById('logoutForm').submit()" class="logout">Sair</a></li>
     </ul>
     }
 }
