--- a/CondoSimples/CondoSimples/Views/Tower/Index.cshtml
+++ b/CondoSimples/CondoSimples/Views/Tower/Index.cshtml
@@ -7,7 +7,7 @@
 <h2>Torres</h2>
 
 <p>
-    @Html.ActionLink("Novo", "Create")
+    @Html.ActionLink("Cadastrar nova torre", "Create")
 </p>
 <div class="table-responsive">
     <table class="table table-hover table-striped">
