--- a/CondoSimples/CondoSimples/Views/Unit/Create.cshtml
+++ b/CondoSimples/CondoSimples/Views/Unit/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model CondoSimples.Models.UnitModel
 
 @{
-    ViewBag.Title = "Novo";
+    ViewBag.Title = "Cadastrar nova unidade";
 }
 
 <h2>Novo</h2>
