--- a/CondoSimples/CondoSimples/Views/Unit/Index.cshtml
+++ b/CondoSimples/CondoSimples/Views/Unit/Index.cshtml
@@ -7,7 +7,7 @@
 <h2>Unidades</h2>
 
 <p>
-    @Html.ActionLink("Novo", "Create")
+    @Html.ActionLink("Cadastrar nova unidade", "Create")
 </p>
 <table class="table-responsive table-hover table-striped">
     <tr>
