--- a/CondoSimples/CondoSimples/Views/Employee/Index.cshtml
+++ b/CondoSimples/CondoSimples/Views/Employee/Index.cshtml
@@ -9,7 +9,7 @@
 @if (User.IsInRole("Sindico"))
 {
     <p>
-        @Html.ActionLink("Novo", "Create")
+        @Html.ActionLink("Cadastrar novo funcionário", "Create")
     </p>
 }
 
