--- a/CondoSimples/CondoSimples/Views/Schedule/Index.cshtml
+++ b/CondoSimples/CondoSimples/Views/Schedule/Index.cshtml
@@ -47,9 +47,9 @@
             </td>
 
             <td>
-                @Html.ActionLink("Edit", "Edit", new { id = item.ID }) |
-                @Html.ActionLink("Details", "Details", new { id = item.ID }) |
-                @Html.ActionLink("Delete", "Delete", new { id = item.ID })
+                @Html.ActionLink("Editar", "Edit", new { id = item.ID }) |
+                @Html.ActionLink("Detalhes", "Details", new { id = item.ID }) |
+                @Html.ActionLink("Excluir", "Delete", new { id = item.ID })
             </td>
         }
     </tr>
