--- a/CondoSimples/CondoSimples/Views/Tower/Create.cshtml
+++ b/CondoSimples/CondoSimples/Views/Tower/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model CondoSimples.Models.TowerModel
 
 @{
-    ViewBag.Title = "Novo";
+    ViewBag.Title = "Cadastrar nova torre";
 }
 
 <h2>Novo</h2>
