--- a/CondoSimples/CondoSimples/Views/Condo/Create.cshtml
+++ b/CondoSimples/CondoSimples/Views/Condo/Create.cshtml
@@ -82,7 +82,7 @@
             <label for="units" class="control-label col-md-2">Número de unidades</label>
             <div class="col-md-10">
                 <input type="number" id="unit" class="form-control" />
-                <input type="button" id="addTowerUnit" value="Incluir" />
+                <input type="button" id="addTowerUnit" value="Incluir" class="btn btn-default" />
             </div>
 
         </div>
