--- a/CondoSimples/CondoSimples/Views/Condo/Edit.cshtml
+++ b/CondoSimples/CondoSimples/Views/Condo/Edit.cshtml
@@ -32,13 +32,7 @@
             </div>
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Address, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Address, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Address, "", new { @class = "text-danger" })
-            </div>
-        </div>
+        @Html.Partial("~/Views/Address/_EditPartial.cshtml", Model.Address)
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
