--- a/CondoSimples/CondoSimples/Views/Notification/Index.cshtml
+++ b/CondoSimples/CondoSimples/Views/Notification/Index.cshtml
@@ -4,10 +4,10 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<h2>Notificação aos condôminos</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Fazer nova notificação", "Create")
 </p>
 <table class="table">
     <tr>
