--- a/CondoSimples/CondoSimples/Views/OutSourcer/Create.cshtml
+++ b/CondoSimples/CondoSimples/Views/OutSourcer/Create.cshtml
@@ -4,6 +4,8 @@
     ViewBag.Title = "Create";
 }
 
+<script src="~/Scripts/jquery-1.10.2.min.js"></script>
+
 <h2>Create</h2>
 
 @using (Html.BeginForm()) 
