--- a/CondoSimples/CondoSimples/Views/Tower/Index.cshtml
+++ b/CondoSimples/CondoSimples/Views/Tower/Index.cshtml
@@ -32,8 +32,8 @@
                 </td>
                 <td>
                     @Html.ActionLink("Editar", "Edit", new { id = item.ID }) |
-                    @Html.ActionLink("Detalhes", "Details", new { id = item.ID }) |
-                    @Html.ActionLink("Excluir", "Delete", new { id = item.ID })
+                    @Html.ActionLink("Detalhes", "Details", new { id = item.ID })
+                    @*@Html.ActionLink("Excluir", "Delete", new { id = item.ID })*@
                 </td>
             </tr>
         }
