--- a/CondoSimples/CondoSimples/Views/Unit/Edit.cshtml
+++ b/CondoSimples/CondoSimples/Views/Unit/Edit.cshtml
@@ -25,7 +25,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Tower_ID, "Tower_ID", htmlAttributes: new { @class = "control-label col-md-2" })
+            <label class="control-label col-md-2">Torre</label>
             <div class="col-md-10">
                 @Html.DropDownList("Tower_ID", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.Tower_ID, "", new { @class = "text-danger" })
