--- a/CondoSimples/CondoSimples/Views/User/Create.cshtml
+++ b/CondoSimples/CondoSimples/Views/User/Create.cshtml
@@ -104,7 +104,7 @@
         <div class="form-group">
             <label class="control-label col-md-2">Torre</label>
             <div class="col-md-10">
-                @Html.DropDownList("TowerId")
+                @Html.DropDownList("TowerId", (IEnumerable<SelectListItem>)ViewBag.TowerId, new { @class = "form-control" })
             </div>
         </div>
         <div class="form-group">
@@ -122,7 +122,7 @@
 
         <div class="form-group">
             <label class="control-label col-md-2">Foto</label>
-            <div class="col-md-10">
+            <div class="col-md-10 upload">
                 <input type="file" name="Image" accept="image/jpeg, image/jpg" />
             </div>
         </div>
