--- a/CondoSimples/CondoSimples/Views/Borrow/Index.cshtml
+++ b/CondoSimples/CondoSimples/Views/Borrow/Index.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Empréstimos";
 }
 
-<h2>Index</h2>
+<h2>Empréstimos</h2>
 
 <p>
     @Html.ActionLink("Nova solicitação", "Create") |
@@ -13,7 +13,7 @@
 </p>
 <div class="table-responsive">
     <table class="table table-hover table-striped">
-        <tr>
+        <tr class="text-center">
             <th>
                 @Html.DisplayNameFor(model => model.Description)
             </th>
