--- a/CondoSimples/CondoSimples/Views/Order/Index.cshtml
+++ b/CondoSimples/CondoSimples/Views/Order/Index.cshtml
@@ -7,7 +7,7 @@
 <h2>Encomendas e correspondências recebidas</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Registrar nova encomenda", "Create")
 </p>
 <div class="table-responsive">
     <table class="table table-hover table-striped">
