--- a/CondoSimples/CondoSimples/Views/OutSourcer/Index.cshtml
+++ b/CondoSimples/CondoSimples/Views/OutSourcer/Index.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<h2>Prestadores de serviço</h2>
 
 <p>
     @Html.ActionLink("Novo prestador", "Create")
