--- a/CondoSimples/CondoSimples/Views/User/Index.cshtml
+++ b/CondoSimples/CondoSimples/Views/User/Index.cshtml
@@ -7,8 +7,8 @@
 <h2>Condôminos cadastrados</h2>
 
 <form method="get" action="/User/Index">
-    <input type="search" name="txt" />
-    <input type="submit" value="Pesquisar" />
+    <input type="search" name="txt" class="form-control search"/>
+    <input type="submit" value="Pesquisar" class="btn btn-default" />
 </form>
 
 
