--- a/CondoSimples/CondoSimples/Views/CommonPlace/Details.cshtml
+++ b/CondoSimples/CondoSimples/Views/CommonPlace/Details.cshtml
@@ -4,10 +4,10 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
+<h2>Área comum - Detalhes</h2>
 
 <div>
-    <h4>CommonPlaceModel</h4>
+    <h4>Área comum</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -61,6 +61,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.ID }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Editar", "Edit", new { id = Model.ID }) |
+    @Html.ActionLink("Voltar", "Index")
 </p>
