--- a/CondoSimples/CondoSimples/Views/Employee/Delete.cshtml
+++ b/CondoSimples/CondoSimples/Views/Employee/Delete.cshtml
@@ -65,7 +65,7 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Excluir" class="btn btn-default" /> |
+            <input type="submit" value="Excluir" class="btn btn-default" /><br />
             @Html.ActionLink("Voltar", "Index")
         </div>
     }
