--- a/CondoSimples/CondoSimples/Views/Notification/Details.cshtml
+++ b/CondoSimples/CondoSimples/Views/Notification/Details.cshtml
@@ -4,10 +4,10 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
+<h2>Notificação - Detalhes</h2>
 
 <div>
-    <h4>NotificationModel</h4>
+    <h4>Notificação aos condôminos</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
