--- a/CondoSimples/CondoSimples/Views/Occurrence/Delete.cshtml
+++ b/CondoSimples/CondoSimples/Views/Occurrence/Delete.cshtml
@@ -4,18 +4,18 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
+<h2>Excluir ocorrência</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Tem certeza que quer escluir isto?</h3>
 <div>
-    <h4>OccurrenceModel</h4>
+    <h4>Ocorrência</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
             @Html.DisplayNameFor(model => model.Description)
         </dt>
 
-        <dd>
+        <dd class="col-md-5">
             @Html.DisplayFor(model => model.Description)
         </dd>
 
@@ -33,7 +33,7 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
+            <input type="submit" value="Excluir" class="btn btn-default" /><br />
             @Html.ActionLink("Voltar", "Index")
         </div>
     }
