--- a/CondoSimples/CondoSimples/Views/Occurrence/Details.cshtml
+++ b/CondoSimples/CondoSimples/Views/Occurrence/Details.cshtml
@@ -4,17 +4,17 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
+<h2>Ocorrências - Detalhes</h2>
 
 <div>
-    <h4>OccurrenceModel</h4>
+    <h4>Ocorrência</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
             @Html.DisplayNameFor(model => model.Description)
         </dt>
 
-        <dd>
+        <dd class="col-md-5">
             @Html.DisplayFor(model => model.Description)
         </dd>
 
