--- a/CondoSimples/CondoSimples/Views/Occurrence/IndexSolved.cshtml
+++ b/CondoSimples/CondoSimples/Views/Occurrence/IndexSolved.cshtml
@@ -36,7 +36,7 @@
                 <td>
                     @Html.DisplayFor(modelItem => item.User.Email)
                 </td>
-                <td>
+                <td class="col-md-5">
                     @Html.DisplayFor(modelItem => item.Description)
                 </td>
                 <td>
