--- a/CondoSimples/CondoSimples/Views/Order/Delete.cshtml
+++ b/CondoSimples/CondoSimples/Views/Order/Delete.cshtml
@@ -4,11 +4,11 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
+<h2>Excluir</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Tem certeza que quer excluir isto?</h3>
 <div>
-    <h4>OrderModel</h4>
+    <h4>Registro de encomendas</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -33,7 +33,7 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
+            <input type="submit" value="Excluir" class="btn btn-default" /><br />
             @Html.ActionLink("Voltar", "Index")
         </div>
     }
