--- a/CondoSimples/CondoSimples/Views/OutSourcer/Create.cshtml
+++ b/CondoSimples/CondoSimples/Views/OutSourcer/Create.cshtml
@@ -6,14 +6,14 @@
 
 <script src="~/Scripts/jquery-1.10.2.min.js"></script>
 
-<h2>Create</h2>
+<h2>Novo prestador de serviço</h2>
 
 @using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>OutSourcerModel</h4>
+        <h4>Prestador de serviço</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -60,7 +60,7 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Salvar" class="btn btn-default" />
             </div>
         </div>
     </div>
