--- a/CondoSimples/CondoSimples/Views/OutSourcer/Details.cshtml
+++ b/CondoSimples/CondoSimples/Views/OutSourcer/Details.cshtml
@@ -4,10 +4,10 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
+<h2>Prestadores - Detalhes</h2>
 
 <div>
-    <h4>OutSourcerModel</h4>
+    <h4>Prestador de serviço</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
