--- a/CondoSimples/CondoSimples/Views/Schedule/Delete.cshtml
+++ b/CondoSimples/CondoSimples/Views/Schedule/Delete.cshtml
@@ -4,11 +4,11 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
+<h2>Excluir</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Tem certeza que quer excluir isto?</h3>
 <div>
-    <h4>ScheduleModel</h4>
+    <h4>Agenda de área comum</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -25,8 +25,8 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="Excluir" class="btn btn-default" /><br />
+            @Html.ActionLink("Voltar", "Index")
         </div>
     }
 </div>
