--- a/CondoSimples/CondoSimples/Views/Schedule/Details.cshtml
+++ b/CondoSimples/CondoSimples/Views/Schedule/Details.cshtml
@@ -4,10 +4,10 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
+<h2>Reserva - Detalhes</h2>
 
 <div>
-    <h4>ScheduleModel</h4>
+    <h4>Reserva de área comum</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -21,6 +21,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.ID }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Editar", "Edit", new { id = Model.ID }) |
+    @Html.ActionLink("Voltar", "Index")
 </p>
