--- a/CondoSimples/CondoSimples/Views/Tower/Edit.cshtml
+++ b/CondoSimples/CondoSimples/Views/Tower/Edit.cshtml
@@ -4,14 +4,14 @@
     ViewBag.Title = "Editar";
 }
 
-<h2>Editar</h2>
+<h2>Torres - Editar</h2>
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>TowerModel</h4>
+        <h4>Torres</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.ID)
