--- a/CondoSimples/CondoSimples/Content/Site.css
+++ b/CondoSimples/CondoSimples/Content/Site.css
@@ -168,6 +168,14 @@ input.check-box {
     position: relative;
     margin: 0 0;
 }
+.display-inline {
+    display: inline-block;
+}
+.report {
+    display: inline-block;
+    width: 100%;
+    margin-bottom: 15px;
+}
 
 @media(max-width: 767px) {
     .row {
