--- a/CondoSimples/CondoSimples/Views/Home/About.cshtml
+++ b/CondoSimples/CondoSimples/Views/Home/About.cshtml
@@ -64,7 +64,7 @@
 
     <p class="last-ones">Para começar a aproveitar todas as vantagens do CondoSimples, não perca tempo, @Html.ActionLink("cadastre seu condomínio", "Create", "Condo")!</p>
 
-    <p class="last-ones">Para mais informações, <a href="#">entre em contato conosco</a>.</p>
+    <p class="last-ones">Para mais informações, @Html.ActionLink("entre em contato conosco.", "Contact", "Home")</p>
 
     <p class="last-ones">Saiba mais sobre nossos <a href="~/Terms/Index">Termos de uso</a> e <a href="~/Privacy/Index">Política de privacidade</a>.</p>
 </section>
