--- a/CondoSimples/CondoSimples/Views/Schedule/Index.cshtml
+++ b/CondoSimples/CondoSimples/Views/Schedule/Index.cshtml
@@ -4,11 +4,15 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<script src="~/Scripts/jquery-1.10.2.min.js"></script>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
+<h2>Agenda de áreas comuns</h2>
+
+<section class="report">
+    @Html.ActionLink("Fazer nova reserva", "Create")
+
+    <button id="print" class="btn btn-default pull-right" onclick="printPage();">Imprimir relatório</button>
+</section>
 <div class="table-responsive">
     <table class="table table-hover table-striped">
         <tr>
@@ -59,3 +63,8 @@
 
     </table>
     </div>
+<script>
+    function printPage() {
+        window.print();
+    }
+</script>
